custom-logo-img changed to ra-logo-img

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                     <img src="assets/imgs/bg-4.jpg" alt="receptionist image" class="img-responsive">
                 </a>
             </figure>
-            <figure class="custom-logo-image">
+            <figure class="ra-logo-image">
                 <a href="#">
                     <img src="assets/imgs/Logo 2-01.png" alt="logo" class="ra-logo-img img-responsive">
                 </a>
