--- a/index.htm
+++ b/index.htm
@@ -110,7 +110,7 @@
         <div class="row py-5">
           <!-- the notes, on a medium screen they re previewed inline and on a small screen, they're previewed block -->
           <div class="col-md-6">
-            <p>
+            <p class="text-justify">
               Hello there and a warm welcome to Luxuria. We’ve been expecting
               you! We know what it means to come from a long and tiring trip and
               to long for a genuine welcome, a good drink and a comfortable bed
@@ -119,7 +119,7 @@
             </p>
           </div>
           <div class="col-md-6">
-            <p>
+            <p class="text-justify">
               Families and business people love us, too. We’ve been hosts to
               Kings, World Leaders, Princes, Queens etc. Our appeal to such a
               wide range of clientele might have to do with our attention to
@@ -220,20 +220,20 @@
     <!-- eiffel tower, the fourth section -->
     <section id="fourth" class="py-5">
       <div class="container">
-        <div class="row">
+        <div class="row mx-auto">
           <!-- tower image -->
           <div class="col aa-pos-rel">
             <img
               src="/assets/imgs/hotel-4.jpg"
               alt=""
-              width="80%"
+              width="85%"
               class="d-none d-md-block"
             />
 
             <!-- button beside the tower image on lg/md screen, it gets hidden on small screen -->
             <button
               class="btn aa-btn-luxuria px-3 rounded-0 text-light text-left d-none d-md-block aa-pos-abs"
-              style="top: 40%; left: 70%;"
+              style="top: 40%; right: 0;"
             >
             <!-- the texts inside the button -->
               <h3 class="font-weight-bold">
@@ -279,7 +279,7 @@
             </div>
             <!-- title and underline ends here -->
             <!-- text -->
-            <p class="mt-3">
+            <p class="mt-3 text-justify">
               Just a 5-minute walk from the Eiffel Tower, Luxuria Hotel is in a
               great location for exploring Paris. The DaVinci Villa features a
               great view of the Eiffel Tower. Each has a private bathroom with a
