--- a/utilities.html
+++ b/utilities.html
@@ -14,7 +14,7 @@
 		<!-- Copy this header tag to get the main navigation -->
 		<header class="">
 			<!-- Home page nav -->
-			<section class="intro relative" >
+			<section class="home-intro relative" >
 				<nav class="navbar navbar-dark navbar-expand-md bg-dark">
 					<div class="container">
 						<button class="navbar-toggler" data-toggle="collapse" data-target="#nav-menu_div" id="toggle-btn">
@@ -96,7 +96,12 @@
 
 		</header>
 		<!-- Copy this header tag to get the main navigation -->
-		
+		<main>
+			<!-- This code below will be used for the footer section -->
+			<footer>
+				
+			</footer>
+		</main>
 
 	<script src="./assets/js/jquery.min.js"></script>
 	<script src="./assets/js/bootstrap.min.js"></script>
