--- a/facilities.html
+++ b/facilities.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="./assets/css/ay-style.css"> 
    
 </head>
-<body>
+<body class="ay-body">
+
   <div class="ay-section__info">
 
     <!-- Dining Cafe -->
