redid index and rooms pages

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Home| Luxurius Hotel</title>
     <!-- Bootstrap Link -->
-    <link rel="stylesheet" href="/assets/css/bootstrap.css" />
+    <link rel="stylesheet" href="./assets/css/bootstrap.css"/>
     <!-- font awesome -->
     <!-- <script src="/js/all.js"></script> -->
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- main css-->
-    <link rel="stylesheet" href="/assets/css/aa-style.css" />
+    <link rel="stylesheet" href="./assets/css/aa-style.css" />
+    <link rel="stylesheet" href="./assets/css/ce-style.css" />
+    <link rel="stylesheet" href="./assets/css/utilities.css" />
   </head>
   <body>
     <!-- Main Page -->
@@ -43,7 +45,7 @@
               <a href="#" class="nav-link">Dinning</a>
             </li>
             <li class="nav-item mx-3 text-uppercase">
-              <a href="#" class="nav-link">Contact</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
             <li class="nav-item mx-3 text-uppercase">
               <a
@@ -153,7 +155,7 @@
             <div class="card">
               <div class="bg-light aa-pos-rel">
                 <img
-                  src="/assets/imgs/hotel-1.jpg"
+                  src="./assets/imgs/hotel-1.jpg"
                   alt=""
                   class="img-fluid"
                 />
@@ -174,7 +176,7 @@
             <div class="card">
               <div class="bg-light aa-pos-rel">
                 <img
-                  src="/assets/imgs/hotel-2.jpg"
+                  src="./assets/imgs/hotel-2.jpg"
                   alt=""
                   class="img-fluid"
                 />
@@ -195,7 +197,7 @@
             <div class="card">
               <div class="bg-light aa-pos-rel">
                 <img
-                  src="/assets/imgs/hotel-3.jpg"
+                  src="./assets/imgs/hotel-3.jpg"
                   alt=""
                   class="img-fluid"
                 />
@@ -224,7 +226,7 @@
           <!-- tower image -->
           <div class="col aa-pos-rel">
             <img
-              src="/assets/imgs/hotel-4.jpg"
+              src="./assets/imgs/hotel-4.jpg"
               alt=""
               width="85%"
               class="d-none d-md-block"
@@ -248,7 +250,7 @@
             </button>
             <!-- button at the bottom of the tower on small screen, it gets hidden on large screen -->
             <img
-              src="/assets/imgs/hotel-4.jpg"
+              src="./assets/imgs/hotel-4.jpg"
               alt=""
               width="100%"
               class="d-block d-md-none"
@@ -304,9 +306,9 @@
     </section>
     <!-- end of footer section -->
     <!-- jQuery -->
-    <script src="/assets/js/jquery.min.js"></script>
+    <script src="./assets/js/jquery.min.js"></script>
     <!-- Bootstrap js -->
-    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
 
   </body>
 </html>
