--- a/rooms.html
+++ b/rooms.html
@@ -102,7 +102,7 @@
 								Guest rooms ranging from standard to suites are available, providing an array of room choices each offering true relaxation. It is our hope that guests, greeted upon arrival in the room by a traditional folded paper crane, will enjoy a comfortable stay.
 							</p>
 						</div>
-						<div class="col-12">
+						<div class="col-12 px-0 px-md-3">
 							<div class="row my-5">
 								<div class="col-md-10 ">
 									<img src="./assets/imgs/room-1.jpg" class="img-fluid w-100">
@@ -120,7 +120,7 @@
 							</div>
 							
 						</div>
-						<div class="col-12">
+						<div class="col-12 px-0 px-md-3">
 							<div class="row my-5 ">
 								<div class="col-md-10 order-md-1">
 									<img src="./assets/imgs/room-2.jpg" class="img-fluid w-100">
