--- a/booking.html
+++ b/booking.html
@@ -18,7 +18,7 @@
 	<body>
 		<header class="">
 			<!-- Home page nav -->
-			<section class="booking intro relative d-flex flex-column" style="min-height: 80vh !important">
+			<section class="booking intro relative d-flex flex-column" >
 				<nav class="navbar navbar-dark navbar-expand-lg">
 					<div class="container">
 						<a href="./index.html" class="navbar-brand" >
