luxuria build 1.0 done

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 			  						</a>
 		  							<div class="dropdown">
 										<div class="dropdown-menu text-center" aria-labelledby="accomodation-drop">
-											<a class="dropdown-item" href="#">Rooms</a>
-											<a class="dropdown-item" href="#">Suites</a>
-											<a class="dropdown-item" href="#">Apartments</a>
+											<a class="dropdown-item" href="./rooms.html">Rooms</a>
+											<a class="dropdown-item" href="./rooms.html">Suites</a>
+											<a class="dropdown-item" href="./rooms.html">Apartments</a>
 										</div>
 									</div>
 			  					</li>
@@ -54,19 +54,19 @@
 			  						</a>
 		  							<div class="dropdown">
 										<div class="dropdown-menu text-center" aria-labelledby="accomodation-drop">
-											<a class="dropdown-item" href="#">Dining Cafe</a>
-											<a class="dropdown-item" href="#">Cinema</a>
-											<a class="dropdown-item" href="#">Swimming Pool</a>
-											<a class="dropdown-item" href="#">Gymnasium</a>
-											<a class="dropdown-item" href="#">Spa & Sauna</a>
+											<a class="dropdown-item" href="./facilities.html">Dining Cafe</a>
+											<a class="dropdown-item" href="./facilities.html">Cinema</a>
+											<a class="dropdown-item" href="./facilities.html">Swimming Pool</a>
+											<a class="dropdown-item" href="./facilities.html">Gymnasium</a>
+											<a class="dropdown-item" href="./facilities.html">Spa & Sauna</a>
 										</div>
 									</div>
 			  					</li>
 			  					<li class="nav-item px-3">
-			  						<a href="#" class="nav-link">Contact</a>
+			  						<a href="./contact.html" class="nav-link">Contact</a>
 			  					</li>
 			  					<li class="nav-item btn-outline-orange book-room-li">
-			  						<a href="#" class="nav-link">Book a room</a>
+			  						<a href="booking.html" class="nav-link">Book a room</a>
 			  					</li>
 			  				</ul>
 			  			</div>
@@ -88,17 +88,17 @@
 							<div class="row ">
 								<div class="col-sm-auto mb-2 mb-sm-0 p-2 white-service-box" >
 									<div style="border-right: 2px solid #000;" class="p-2 text-center">
-										<a class="emphasis mx-auto" href="#">Choose your hotel</a>
+										<a class="emphasis mx-auto" href="./booking.html">Choose your hotel</a>
 									</div>
 								</div>
 								<div class="col-sm-auto mb-2 mb-sm-0 p-2 white-service-box" >
 									<div class="p-2 text-center">
-										<a class="emphasis mx-auto" href="#">Check in - Check out</a>
+										<a class="emphasis mx-auto" href="./booking.html">Check in - Check out</a>
 									</div>
 								</div>
 								<div class="col-sm-auto mb-2 mb-sm-0 p-2 orange-service-box" >
 									<div class="p-2 text-center">
-										<a class="text-white emphasis mx-auto" href="#">Check Availability</a>
+										<a class="text-white emphasis mx-auto" href="./booking.html">Check Availability</a>
 									</div>
 								</div>
 							</div>
@@ -112,7 +112,7 @@
 			
 			<div class="row  ">
 				<div class="bg-white col-sm-auto mx-auto">
-					<a href="" class="text-center def-text-links" style="font-size: 80%">
+					<a href="./covid-19.html" class="text-center def-text-links" style="font-size: 80%">
 						Click here to view information and updates regarding the COVID-19.
 					</a>
 				</div>
@@ -122,7 +122,7 @@
 			<section class="">
 				<div class="container">
 					<header class="">
-						<h1 class="text-center emphasis text-dark">Welcome to Luxuria</h1>
+						<h1 class="text-center emphasis orange-hr text-dark">Welcome to Luxuria</h1>
 						<hr class="orange-hr mb-5">
 					</header>
 					<div class="row">
@@ -150,7 +150,7 @@
 			<section class="py-5">
 				<div class="container">
 					<header class="my-4">
-						<h2 class=" text-center emphasis text-dark arial">Our Hotels</h2>
+						<h2 class=" text-center emphasis orange-hr text-dark arial">Our Hotels</h2>
 						<hr class="orange-hr mb-5">
 
 					</header>
@@ -177,7 +177,7 @@
 			<section class="py-5">
 				<div class="container">
 					<header class="my-4">
-						<h2 class=" text-center emphasis text-dark ">Incentives</h2>
+						<h2 class=" text-center emphasis orange-hr text-dark ">Incentives</h2>
 						<hr class="orange-hr mb-5">
 					</header>
 					<div class="row">
@@ -253,7 +253,7 @@
 					</div>
 					<div class="col-md-6 mb-5 mb-lg-0 col-lg-3 ">
 						<div class="d-flex ">
-							<img class="logo mx-auto" src="./assets/imgs/logo.png" class="img-fluid">
+							<img class="logo mx-auto" src="./assets/imgs/logo.jpg" class="img-fluid">
 						</div>
 						<hr class="footer-hr">
 						<div class="socia-links ">
