--- a/rooms.html
+++ b/rooms.html
@@ -31,19 +31,19 @@
 			  			</div>
 			  			<div class="collapse navbar-collapse text-center" id="nav-menu_div">
 			  				<ul class="navbar-nav ml-auto">
-			  					<li class="nav-item active ">
+			  					<li class="nav-item ">
 			  						<a href="./index.html" class="nav-link ">Home</a>
 			  					</li>
-			  					<li class="nav-item px-3">
+			  					<li class="nav-item px-3 active">
 		  							<a href="#" class="nav-link dropdown-toggle" 
 		  								id="accomodation-drop" data-toggle="dropdown">
 			  							Accomodation
 			  						</a>
 		  							<div class="dropdown">
 										<div class="dropdown-menu text-center" aria-labelledby="accomodation-drop">
-											<a class="dropdown-item" href="#">Rooms</a>
-											<a class="dropdown-item" href="#">Suites</a>
-											<a class="dropdown-item" href="#">Apartments</a>
+											<a class="dropdown-item" href="./rooms.html">Rooms</a>
+											<a class="dropdown-item" href="./rooms.html">Suites</a>
+											<a class="dropdown-item" href="./rooms.html">Apartments</a>
 										</div>
 									</div>
 			  					</li>
@@ -54,19 +54,19 @@
 			  						</a>
 		  							<div class="dropdown">
 										<div class="dropdown-menu text-center" aria-labelledby="accomodation-drop">
-											<a class="dropdown-item" href="#">Dining Cafe</a>
-											<a class="dropdown-item" href="#">Cinema</a>
-											<a class="dropdown-item" href="#">Swimming Pool</a>
-											<a class="dropdown-item" href="#">Gymnasium</a>
-											<a class="dropdown-item" href="#">Spa & Sauna</a>
+											<a class="dropdown-item" href="./facilities.html">Dining Cafe</a>
+											<a class="dropdown-item" href="./facilities.html">Cinema</a>
+											<a class="dropdown-item" href="./facilities.html">Swimming Pool</a>
+											<a class="dropdown-item" href="./facilities.html">Gymnasium</a>
+											<a class="dropdown-item" href="./facilities.html">Spa & Sauna</a>
 										</div>
 									</div>
 			  					</li>
 			  					<li class="nav-item px-3">
-			  						<a href="#" class="nav-link">Contact</a>
+			  						<a href="./contact.html" class="nav-link">Contact</a>
 			  					</li>
 			  					<li class="nav-item btn-outline-orange book-room-li">
-			  						<a href="#" class="nav-link">Book a room</a>
+			  						<a href="booking.html" class="nav-link">Book a room</a>
 			  					</li>
 			  				</ul>
 			  			</div>
