--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 					</div>
 					<div class="col-md-6 mb-5 mb-lg-0 col-lg-3 ">
 						<div class="d-flex ">
-							<img class="logo mx-auto" src="./assets/imgs/logo.jpg" class="img-fluid">
+							<img class="logo mx-auto" src="./assets/imgs/Logo.jpg" class="img-fluid">
 						</div>
 						<hr class="footer-hr">
 						<div class="socia-links ">
