removed some unnecessary things

--- a/index.html
+++ b/index.html
@@ -276,5 +276,19 @@
 			</footer>
 		<script src="./assets/js/jquery.min.js"></script>
 		<script src="./assets/js/bootstrap.min.js"></script>
+		<script src="./assets/js/libraries/WOW-master/dist/wow.js"></script>
+		<script>
+			wow = new WOW(
+	          {
+	          boxClass:     'wow',      // default
+	          animateClass: 'animated', // default
+	          offset:       0,          // default
+	          mobile:       true,       // default
+	          live:         true        // default
+	        }
+	        )
+	        wow.init();
+			// new WOW().init();
+		</script>
 	</body>
 </html>
